--- a/Index.html
+++ b/Index.html
@@ -12,5 +12,9 @@
         <a href="Index.html">Inicio</a> 
         <br>
         <a href="Curso1.html">Curso de Bases de Datos</a>
+        <br>
+        <a href="Curso2.html">Curso de Bases de Datos 2</a>
+        <br>
+        <a href="Curso3.html">Curso de Compiladores</a>
 </body>
 </html>
