--- a/Index.html
+++ b/Index.html
@@ -6,15 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pagina Principal</h1>
-
-    <h2>Menú de Navegación</h2>
-        <a href="Index.html">Inicio</a> 
-        <br>
-        <a href="Curso1.html">Curso de Bases de Datos</a>
-        <br>
-        <a href="Curso2.html">Curso de Bases de Datos 2</a>
-        <br>
-        <a href="Curso3.html">Curso de Compiladores</a>
+    <header>
+        <h1>Resumen de Cursos Finalizados</h1>
+    </header>
+    <main>
+        <p>Bienvenidos a nuestro sitio web donde encontrarán información detallada sobre los cursos finalizados en nuestra carrera.</p>
+        <ul>
+            <li><a href="Curso1.html">Curso 1: Compiladores</a></li>
+            <li><a href="Curso2.html">Curso 2: Base de datos</a></li>
+            <li><a href="Curso3.html">Curso 3: Electronica Digital</a></li>
+            <li><a href="Curso4.html">Curso 4: Investigacion de operaciones</a></li>
+            <li><a href="Curso5.html">Curso 5: Metodos Numericos</a></li>
+        </ul>
+    </main>
+    <footer>
+        <p>Josue Andre Lopez Diaz - 9490 - 21 - 7374</p>
+        <p>Nombre del Integrante 2 - Carnet</p>
+    </footer>
 </body>
 </html>
