--- a/Curso2.html
+++ b/Curso2.html
@@ -6,6 +6,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <header>
+        <h1>Curso 2: Base de datos</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Puntos Clave</h2>
+            <ul>
+                <li>Punto 1 del Curso 2</li>
+                <li>Punto 2 del Curso 2</li>
+                <li>Punto 3 del Curso 2</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Contenido Adicional</h2>
+            <p>Descripción del contenido adicional del Curso 2.</p>
+            <table border="1">
+                <tr>
+                    <th>Encabezado 1</th>
+                    <th>Encabezado 2</th>
+                </tr>
+                <tr>
+                    <td>Dato 1</td>
+                    <td>Dato 2</td>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <p>Josue Andre Lopez Diaz - 9490 - 21 - 7374</p>
+        <p>Nombre del Integrante 2 - Carnet</p>
+    </footer>
 </body>
 </html>
