--- a/Curso3.html
+++ b/Curso3.html
@@ -3,34 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Electronica Digital</title>
 </head>
 <body>
     <header>
-        <h1>Curso 3: Electronica Digital</h1>
+        <center><h1>Curso 3: Electronica Digital</h1></center>
     </header>
     <main>
         <section>
             <h2>Puntos Clave</h2>
             <ul>
-                <li>Punto 1 del Curso 3</li>
-                <li>Punto 2 del Curso 3</li>
-                <li>Punto 3 del Curso 3</li>
+                <li><b>Conceptos Básicos: </b> Fundamentos de la electrónica digital y su importancia en la tecnología actual.</li>
+                <li><b>Comparación con Electrónica Analógica: </b> Diferencias y relaciones entre circuitos digitales y analógicos.</li>
+                <li><b>Sistemas Binario, Octal, Hexadecimal: </b> Cómo se representan los números en diferentes sistemas de numeración y cómo convertir entre ellos.</li>
+                <li><b>Puertas Lógicas: </b> Uso de puertas lógicas básicas (AND, OR, NOT, etc.) para construir circuitos digitales.</li>
+                <li><b>Álgebra Booleana: </b> Aplicación de leyes y teoremas de álgebra booleana para simplificar y diseñar circuitos digitales.</li>
+                <li><b>Multiplexores y Demultiplexores: </b> Componentes que permiten seleccionar o distribuir señales digitales.</li>
             </ul>
         </section>
         <section>
             <h2>Contenido Adicional</h2>
-            <p>Descripción del contenido adicional del Curso 3.</p>
-            <table border="1">
+            <p>La electrónica digital es una rama de la electrónica que se enfoca en el procesamiento de señales y datos utilizando señales discretas, generalmente representadas como combinaciones de ceros y <br> unos (bits). A diferencia de la electrónica analógica, que trabaja con señales continuas, la electrónica digital opera con información en formato digital, lo que la hace especialmente adecuada para el procesamiento, almacenamiento y transmisión de información de manera precisa y confiable.</p>
+            <center><table border="1">
                 <tr>
-                    <th>Encabezado 1</th>
-                    <th>Encabezado 2</th>
+                    <th>Módulo</th>
+                    <th>Temas Clave</th>
+                    <th>Descripción Breve</th>
                 </tr>
                 <tr>
-                    <td>Dato 1</td>
-                    <td>Dato 2</td>
+                    <td>Introducción a la Electrónica Digital</td>
+                    <td>Conceptos Básicos, Comparación con Electrónica Analógica</td>
+                    <td>Introducción a la electrónica digital, diferencias con la <br> electrónica analógica y aplicaciones básicas.</td>
                 </tr>
-            </table>
+                <tr>
+                    <td>Sistemas de Numeración</td>
+                    <td>Sistemas Binario, Octal, Hexadecimal</td>
+                    <td>Representación de datos en diferentes sistemas de numeración <br> (binario, octal, hexadecimal) y su conversión.</td>
+                </tr>
+                <tr>
+                    <td>Puertas Lógicas y Álgebra Booleana</td>
+                    <td>Puertas AND, OR, NOT, NOR, NAND, XOR, Simplificación <br> de Booleanas</td>
+                    <td>Diseño y análisis de circuitos usando puertas lógicas básicas y <br> álgebra booleana para simplificación de circuitos.</td>
+                </tr>
+                <tr>
+                    <td>Circuitos Combinacionales</td>
+                    <td>Multiplexores, Demultiplexores, Codificadores, Decodificadores</td>
+                    <td>Diseño y análisis de circuitos combinacionales que realizan funciones <br> lógicas específicas.</td>
+                </tr>
+                <tr>
+                    <td>Circuitos Secuenciales</td>
+                    <td>Flip-Flops, Contadores, Registros</td>
+                    <td>Estudio de circuitos secuenciales que almacenan y procesan <br> información en el tiempo, como flip-flops y contadores.</td>
+                </tr>
+                <tr>
+                    <td>Máquinas de Estados Finitos</td>
+                    <td>Diagramas de Estados, Diseño de Máquinas de Estados</td>
+                    <td>Modelado y diseño de sistemas secuenciales mediante máquinas <br> de estados finitos.</td>
+                </tr>
+            </table></center>
+        </section>
+        <br>
+        <p>La electrónica digital se basa en varios elementos básicos que son fundamentales para el procesamiento de información en formato digital. Estos elementos proporcionan las bases para la construcción <br> de circuitos y sistemas digitales más complejos.</p>
+        <p>La Electrónica Analógica representa señales de manera continua, utilizando voltajes o corrientes que varían de manera suave y continua en el tiempo. Estas señales pueden tener un número infinito de <br> valores posibles dentro de un rango mientras que la Electónica Digital lo hace demanera discreta, utilizando valores binarios (0 y 1).</p>
+        <section>
+            <div class="gallery">
+                <img src="https://www.diarioelectronicohoy.com/blog/imagenes/2015/05/dosdigitos4029.jpg" alt="Imagen 1" width="300" height="200">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhzDF3WhubjHIgPE6XAzPgOCj4o_yids7c3elFw0IgE9Ka6oXmfSJEmApB_js94Z3GFYP7p11ZXZAmhTWa1vhn-37-XJoIwGCFU8B18BXXCDojtSrngSHHmAzLC8VGY5o5UfsS5GTO5hqls/s640/primer-plano-placa-circuito-electronico-cpu-microchip-componentes-electronicos-fondo_1387-819.jpg" alt="Imagen 2" width="400" height="200">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="https://cypes.grupoeurohispana.com/img/bgsubcat/205/subcat205-foto4.jpg" alt="Imagen 3" width="400" height="200">
+            </div>
         </section>
     </main>
     <footer>
