--- a/Curso4.html
+++ b/Curso4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Investigacion de operaciones</title>
 </head>
 <body>
     <header>
@@ -13,14 +13,18 @@
         <section>
             <h2>Puntos Clave</h2>
             <ul>
-                <li>Punto 1 del Curso 4</li>
-                <li>Punto 2 del Curso 4</li>
-                <li>Punto 3 del Curso 4</li>
+                <li><b>Historia y Definición: </b> Orígenes y evolución de la IO, y su importancia en la toma de decisiones.</li>
+                <li><b>Aplicaciones: </b> Cómo se aplican las técnicas de IO en la industria, desde la logística hasta la planificación estratégica.</li>
+                <li><b>Formulación de Modelos: </b> Proceso de traducción de problemas reales en modelos matemáticos.</li>
+                <li><b>Tipos de Modelos: </b> Diferencias entre modelos lineales, no lineales, estocásticos y deterministas.</li>
+                <li><b>Problemas de Programación Lineal: </b> Estructura y resolución de problemas donde las relaciones son lineales.</li>
+                <li><b>Métodos Simplex: </b> Algoritmo utilizado para encontrar la solución óptima de problemas de programación lineal.</li>
             </ul>
         </section>
         <section>
             <h2>Contenido Adicional</h2>
-            <p>Descripción del contenido adicional del Curso 4.</p>
+            <p>La Investigacion de Operaciones es una disciplina que consiste en la aplicación de métodos analíticos avanzados con el propósito de apoyar el proceso de toma de decisiones, identificando los mejores <br> cursos de acción posibles.</p>
+            <p>Utiliza técnicas de modelamiento matemático, análisis estadístico y optimización matemática, con el objetivo de alcanzar soluciones óptimas o cercanas a ellas cuando se enfrentan problemas de decisión <br> complejos. Se espera que las decisiones alcanzadas mediante el uso de un modelo de investigación operativa sean significativamente mejores en comparación a aquellas decisiones que se podrían tomar <br> haciendo uso de la simple intuición o experiencia del tomador de decisiones. </p>
             <table border="1">
                 <tr>
                     <th>Encabezado 1</th>
