--- a/Index.html
+++ b/Index.html
@@ -3,23 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página Principal</title>
 </head>
 <body>
-    <header>
+    <header style="background-color: #4CAF50; color: white; text-align: center; padding: 1em 0;">
         <h1>Resumen de Cursos Finalizados</h1>
     </header>
-    <main>
-        <p>Bienvenidos a nuestro sitio web donde encontrarán información detallada sobre los cursos finalizados en nuestra carrera.</p>
-        <ul>
-            <li><a href="Curso1.html">Curso 1: Compiladores</a></li>
-            <li><a href="Curso2.html">Curso 2: Base de datos</a></li>
-            <li><a href="Curso3.html">Curso 3: Electronica Digital</a></li>
-            <li><a href="Curso4.html">Curso 4: Investigacion de operaciones</a></li>
-            <li><a href="Curso5.html">Curso 5: Metodos Numericos</a></li>
+    <nav style="background-color: #333;">
+        <ul style="list-style: none; padding: 0; margin: 0; display: flex; justify-content: center;">
+            <li style="margin: 0;">
+                <a href="index.html" style="display: block; padding: 1em; color: white; text-decoration: none; text-align: center;">Inicio</a>
+            </li>
+            <li style="margin: 0;">
+                <a href="Curso1.html" style="display: block; padding: 1em; color: white; text-decoration: none; text-align: center;">Compiladores</a>
+            </li>
+            <li style="margin: 0;">
+                <a href="Curso2.html" style="display: block; padding: 1em; color: white; text-decoration: none; text-align: center;">Base de datos</a>
+            </li>
+            <li style="margin: 0;">
+                <a href="Curso3.html" style="display: block; padding: 1em; color: white; text-decoration: none; text-align: center;">Electrónica Digital</a>
+            </li>
+            <li style="margin: 0;">
+                <a href="Curso4.html" style="display: block; padding: 1em; color: white; text-decoration: none; text-align: center;">Investigación de Operaciones</a>
+            </li>
+            <li style="margin: 0;">
+                <a href="Curso5.html" style="display: block; padding: 1em; color: white; text-decoration: none; text-align: center;">Métodos Numéricos</a>
+            </li>
         </ul>
+    </nav>
+    <main style="padding: 2em; text-align: center;">
+        <p><b>Bienvenidos a nuestro sitio web donde encontrarán información detallada sobre los cursos finalizados en la carrera de Ingeniería en Sistemas.</b></p>
+        <section> 
+            <div class="gallery"> 
+                <img src="https://www.galileo.edu/fisicc/files/2020/06/preview_video_fisicc-compressor.jpg" alt="Imagen 1" width="500" height="300"> 
+        </div> 
+        </section>
     </main>
-    <footer>
+    
+    <footer style="background-color: #4CAF50; color: white; text-align: center; padding: 1em 0; position: fixed; width: 100%; bottom: 0;">
         <p>Josue Andre Lopez Diaz - 9490 - 21 - 7374</p>
         <p>Nombre del Integrante 2 - Carnet</p>
     </footer>
