--- a/Curso5.html
+++ b/Curso5.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Metodos Numericos</title>
 </head>
 <body>
     <header>
-        <h1>Curso 4: Metodos Numericos</h1>
+        <h1>Curso 5: Metodos Numericos</h1>
     </header>
     <main>
         <section>
