--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
         </ul>
     </nav>
     <main style="padding: 2em; text-align: center;">
-        <p><b>Bienvenidos a nuestro sitio web donde encontrarán información detallada sobre los cursos finalizados en la carrera de Ingeniería en Sistemas.</b></p>
+        <p><b>¡Bienvenidos a nuestro sitio web! Aquí encontrarán información detallada sobre los cursos finalizados en la carrera de Ingeniería en Sistemas. El objetivo es proporcionar una descripción completa y accesible de cada curso, destacando sus contenidos clave, aplicaciones prácticas y la importancia en la formación profesional de los ingenieros en sistemas.</b></p>
         <section> 
             <div class="gallery"> 
                 <img src="https://www.galileo.edu/fisicc/files/2020/06/preview_video_fisicc-compressor.jpg" alt="Imagen 1" width="500" height="300"> 
@@ -41,8 +41,8 @@
     </main>
     
     <footer style="background-color: #4CAF50; color: white; text-align: center; padding: 1em 0; position: fixed; width: 100%; bottom: 0;">
+        <p>Nombre del Estudiante  - Carnet</p>
         <p>Josue Andre Lopez Diaz - 9490 - 21 - 7374</p>
-        <p>Nombre del Integrante 2 - Carnet</p>
     </footer>
 </body>
 </html>
