--- a/Curso1.html
+++ b/Curso1.html
@@ -84,8 +84,8 @@
     </section>
     </main>
     <footer>
+        <p>Nombre del Estudiante - Carnet</p>
         <p>Josue Andre Lopez Diaz - 9490 - 21 - 7374</p>
-        <p>Nombre del Integrante 2 - Carnet</p>
     </footer>
 </body>
 </html>
